# Gerenciador-financeiro

./: .env.example  .gitignore  README.md  README2.md  app.py  config.py  expenses.db  gerador_grafico_python.py  grafico.html  pyproject.toml  requirements.txt  run.py  test_rust.py
docs/: Documentacao.md
gerenciador_financeiro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
instance/: expenses.db
project/: __init__.py  models.py
project/auth/: forms.py  routes.py
project/investments/: routes.py
project/main/: forms.py  routes.py
project/static/: style.css
project/static/css/: main.css
project/static/css/base/: reset.css  typography.css
project/static/css/components/: alerts.css  buttons.css  cards.css  forms.css  modals.css
project/static/css/layout/: auth.css  sidebar.css
project/static/css/pages/: controle.css  dashboard.css  news.css
project/static/js/: main.js  password-strength.js
project/templates/: auth_base.html  base.html  controle.html  dashboard_base.html  index.html  investments.html  login.html  news.html  register.html
project/utils/: ai.py  investing_ai.py  news.py
rust_structures/: Cargo.toml  __init__.py  rust_structures.pyd
rust_structures/src/: lib.rs
static/: charts-init.js  script.js  style.css
templates/: index.html  news.html
tests/: base.py  test_ai_model.py  test_routes.py
